--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "project",
     "require": {
         "silex/silex": "~2.0",
-        "kphoen/silex-rulerz-provider": "dev-master"
+        "kphoen/silex-rulerz-provider": "^1.0"
     },
     "autoload": {
         "psr-0": { "": "src/" }
